[project]
name = "rl-template"
version = "0.1.25"
description = "A type-safe, algorithm-agnostic Reinforcement Learning framework"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Mohamed Tine", email = "mohamedtine17@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
